Konfigurerer STS litt annerledes